Implement graph to show accurate data

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,9 +4,11 @@
 
 <h2>Enter your details</h2>
 
+
+
 <form method="post" action="{{ url_for('index') }}">
     <label for="steam32_id">Steam ID</label>
-    <input type="text" id="steam32_id" name="steam32_id"> <br>
+    <input value="197033655" type="text" id="steam32_id" name="steam32_id"> <br>
 
     <label for="hero_list">Select Hero</label>
     <select id="hero_list" name="hero_id">
